modules/cli/src/test/resources/bad/syntax/disamb/globals/gprotocoldecl/GProtocolDecl04.scr
module bad.syntax.disamb.globals.protocoldecl.GProtocolDecl04;


global protocol GProtocolDecl4(role A, role B, role C)
{
	do GProtocolDecl4a(A, B);
}

global protocol GProtocolDecl4a(role B, role C)
{
	do GProtocolDecl4b(B, C);
}

global protocol GProtocolDecl4b(role D, role E)
{
	1() from D to E;
	do GProtocolDecl4a(D, E);
}
